--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="make">
                 <h1>And I make</h1>
                 <ul>
-                    <li><a class="hashtag-link" href="#">#</a>Music</li>
+                    <li><a class="hashtag-link" href="https://soundcloud.com/mattishere" target="_blank">#</a>Music</li>
                     <li><a class="hashtag-link" href="#">#</a>Websites</li>
                     <li><a class="hashtag-link" href="#">#</a>Extensions</li>
                     <li><a class="hashtag-link" href="#">#</a>Posters</li>
@@ -77,7 +77,7 @@
                 <div class="small-text">
                     <p>Thanks for checking out my portfolio!</p>
                     <p>If you'd like to get in touch, feel free to email me at <a href="mailto:matthew.baird.1805@gmail.com">matthew.baird.1805@gmail.com</a></p>
-                    <p>Or reach out on discord: <a href="https://discord.com/users/1311871086211764308">matt_explores</a></p>
+                    <p>Or reach out on discord: <a href="https://discord.com/users/1311871086211764308" target="_blank">matt_explores</a></p>
                 </div>
             </section>
         </div>
